--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
   <body>
     <header>
       <section>
-        <a href=""><i class="fa-solid fa-xl fa-chess-rook"></i></a>
+        <a href=""><i class="fag-solid fa-xl fa-chess-rook"></i></a>
         <form id="search-form">
           <input
             id="search-bar"
