--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
   <body>
     <header>
       <section>
-        <a href=""><i class="fag-solid fa-xl fa-chess-rook"></i></a>
+        <a href="#"><i class="fa-solid fa-xl fa-chess-rook"></i></a>
         <form id="search-form">
           <input
             id="search-bar"
@@ -112,5 +112,9 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/notyf@3/notyf.min.js"></script>
     <script src="script.js"></script>
+    <script
+      src="https://kit.fontawesome.com/8fb032a1fa.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
